syntax = "proto3";

option go_package = "../protobuf";

import "annotations.proto";

message UploadVideoRequest {
  bytes VideoData = 1;
  string FileName = 2;
}

message UploadVideoResponse {
  string  VideoId = 1;
}

message GetVideoRequest {
  string VideoId = 1;
}

message GetVideoResponse {
  bytes VideoData = 1;
  string FileName = 2;
}

service Video {
  rpc UploadVideo(UploadVideoRequest) returns (UploadVideoResponse) {
    option (google.api.http) = {
      post: "/v1/videos/upload"
      body: "*"
    };
  }

  rpc GetVideo(GetVideoRequest) returns (GetVideoResponse) {
    option (google.api.http) ={
      get: "/v1/videos/{VideoId}"
    };
  }
}
//protoc --go_out=. --go_opt=paths=source_relative \
//       --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//       --grpc-gateway_out=. --grpc-gateway_opt=paths=source_relative \
//       video.proto